examples/test/testpolicy5814.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5814
  namespace: namespace16
spec:
  podSelector:
    matchLabels:
      key30: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value10
          key12: value34
          key23: value3
      podSelector:
        matchLabels:
          key33: value26
          key40: value14
